--- a/src/main.jade
+++ b/src/main.jade
@@ -6,7 +6,7 @@ html(lang="en")
     
     meta(http-equiv="content-type" content="text/html; charset=utf-8")
     meta(name='viewport' content=`user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1`)
-    //link(rel='stylesheet' href='index.css')
+    link(rel='stylesheet' href='index.css')
 
   body
     
